--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- Botones principales -->
   <a href="https://britexelectronica.com/catalogo" class="btn">📦 Catálogo</a>
   <a href="https://www.trustpilot.com/review/britexelectronica.com" class="btn">⭐ Opiniones</a>
-  <a href="mailto:contacto@britexelectronica.com" class="btn">📧 Contacto</a>
+  <a href="mailto:contacto@britexelectronica.com" class="btn">📧 Contáctanos</a>
 
   <!-- Botón de instalación -->
   <button id="installBtn" class="btn" style="display:none;">📲 Instalar App</button>
