--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <p>Plataforma cubana de innovación técnica, productos electrónicos y energía confiable.</p>
 
   <!-- Botones principales -->
-  <a href="https://britexelectronica.com/catalogo" class="btn">📦 Catálogo</a>
+  <a href="https://www.britexelectronica.com/tienda/" class="btn">📦 Catálogo</a>
   <a href="https://www.trustpilot.com/review/britexelectronica.com" class="btn">⭐ Opiniones</a>
-  <a href="mailto:contacto@britexelectronica.com" class="btn">📧 Contáctanos</a>
+  <a href="https://www.britexelectronica.com/contáctanos/" class="btn">📧 Contáctanos</a>
 
   <!-- Botón de instalación -->
   <button id="installBtn" class="btn" style="display:none;">📲 Instalar App</button>
