--- a/index.html
+++ b/index.html
@@ -4,125 +4,83 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BRITEX Electrónica</title>
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#045174" />
-  <meta name="description" content="Plataforma cubana de innovación técnica, productos electrónicos y energía confiable." />
+  <meta name="description" content="Tienda cubana de productos electrónicos y energía confiable. Funciona offline." />
   
   <style>
     body {
-      background-color: #000;
-      color: #fff;
-      font-family: system-ui, -apple-system, BlinkMacOSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-      text-align: center;
-      padding: 40px;
       margin: 0;
+      padding: 20px;
+      background: #000;
+      color: #fff;
+      font-family: system-ui, sans-serif;
+      text-align: center;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
     }
-    .logo {
-      width: 120px;
-      height: 120px;
-      margin-bottom: 20px;
-    }
-    h1 {
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 16px;
-      opacity: 0.8;
-      max-width: 400px;
-    }
+    .logo { width: 100px; height: 100px; margin: 20px 0; }
+    h1 { margin: 10px 0; font-size: 1.8rem; }
+    p { font-size: 1rem; opacity: 0.85; max-width: 340px; margin: 0 0 30px; }
     .btn {
-      display: inline-block;
-      margin: 15px;
-      padding: 12px 20px;
-      background-color: #045174;
-      color: #fff;
+      display: block;
+      margin: 12px auto;
+      padding: 12px;
+      background: #045174;
+      color: white;
       text-decoration: none;
       border-radius: 6px;
       font-weight: bold;
-      transition: background 0.3s;
-      cursor: pointer;
-      border: none;
+      width: 80%;
+      max-width: 320px;
     }
-    .btn:hover {
-      background-color: #0679a3;
-    }
-    .status {
-      margin-top: 20px;
-      font-size: 14px;
-      opacity: 0.7;
-    }
+    .btn:hover { background: #0679a3; }
+    #status { font-size: 0.9rem; opacity: 0.7; margin-top: 20px; }
   </style>
 </head>
 <body>
-  <img 
-    src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" 
-    alt="BRITEX Logo" 
-    class="logo" 
-    loading="eager"
-  />
- 
+  <img src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" alt="BRITEX" class="logo" loading="eager" />
   <h1>BRITEX Electrónica</h1>
-  <p>Plataforma cubana de innovación técnica, productos electrónicos y energía confiable.</p>
-  
-  <!-- Botones principales -->
-  <a href="https://www.britexelectronica.com/tienda/" class="btn">📦 Catálogo</a>
+  <p>Productos electrónicos y energía confiable. Funciona incluso sin conexión.</p>
+
+  <a href="https://www.britexelectronica.com/tienda/" class="btn">📦 Ver Catálogo</a>
   <a href="https://www.trustpilot.com/review/britexelectronica.com" class="btn">⭐ Opiniones</a>
   <a href="https://www.britexelectronica.com/contáctanos/" class="btn">📧 Contáctanos</a>
-  
-  <!-- Botón de instalación PWA -->
+
   <button id="installBtn" class="btn" style="display:none;">📲 Instalar App</button>
 
-  <!-- Mensaje de estado (útil para debug) -->
-  <div class="status" id="swStatus">Cargando PWA...</div>
+  <div id="status">Cargando... (Offline listo)</div>
 
-  <!-- Registro del Service Worker optimizado -->
   <script>
+    // Registro Service Worker optimizado para scope completo
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('/sw.js', { scope: '/' })
-          .then(reg => {
-            console.log('Service Worker registrado OK');
-            document.getElementById('swStatus').textContent = '¡Offline listo! (PWA activada)';
-          })
-          .catch(err => {
-            console.error('Error al registrar SW:', err);
-            document.getElementById('swStatus').textContent = 'Modo básico (sin offline completo)';
-          });
+          .then(() => document.getElementById('status').textContent = '¡Offline activado!')
+          .catch(err => document.getElementById('status').textContent = 'Modo básico');
       });
-    } else {
-      document.getElementById('swStatus').textContent = 'Navegador no soporta PWA';
     }
 
-    // Manejo del prompt de instalación
+    // Prompt de instalación PWA
     let deferredPrompt;
     const installBtn = document.getElementById('installBtn');
-    window.addEventListener('beforeinstallprompt', (e) => {
+    window.addEventListener('beforeinstallprompt', e => {
       e.preventDefault();
       deferredPrompt = e;
-      installBtn.style.display = 'inline-block';
+      installBtn.style.display = 'block';
     });
-
     installBtn.addEventListener('click', async () => {
-      if (deferredPrompt) {
-        deferredPrompt.prompt();
-        const { outcome } = await deferredPrompt.userChoice;
-        console.log('Instalación:', outcome);
-        deferredPrompt = null;
-        installBtn.style.display = 'none';
-      }
+      deferredPrompt?.prompt();
+      const { outcome } = await deferredPrompt.userChoice;
+      deferredPrompt = null;
+      installBtn.style.display = 'none';
     });
 
-    // Recarga automática si detecta conexión de vuelta
-    window.addEventListener('online', () => {
-      console.log('Conexión recuperada');
-      // Puedes agregar reload si quieres: window.location.reload();
-    });
+    // Reconexión automática
+    window.addEventListener('online', () => location.reload());
   </script>
 </body>
 </html>
