--- a/offline.html
+++ b/offline.html
@@ -2,104 +2,37 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000">
-  <title>Sin conexión | BRITEX Electrónica</title>
+  <title>Sin conexión | BRITEX</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      background: #000;
-      color: #fff;
-      font-family: system-ui, sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
+      margin:0; padding:20px; height:100vh; background:#000; color:#fff;
+      font-family:system-ui,sans-serif; display:flex; flex-direction:column;
+      justify-content:center; align-items:center; text-align:center;
     }
-    .logo {
-      width: 80px;
-      height: 80px;
-      margin-bottom: 20px;
-      object-fit: contain;
-    }
-    h1 {
-      margin: 0 0 10px;
-      font-size: 1.8rem;
-      font-weight: 600;
-    }
-    p {
-      margin: 0 0 30px;
-      font-size: 1.1rem;
-      opacity: 0.85;
-      max-width: 340px;
-      line-height: 1.4;
-    }
-    .status {
-      font-size: 0.95rem;
-      opacity: 0.7;
-      margin-bottom: 20px;
-    }
-    button {
-      padding: 12px 28px;
-      background: #1a1a1a;
-      color: #fff;
-      border: 1px solid #333;
-      border-radius: 8px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background: #333;
-    }
+    .logo { width:90px; height:90px; margin-bottom:20px; }
+    h1 { margin:0 0 12px; font-size:1.7rem; }
+    p { margin:0 0 30px; font-size:1rem; opacity:0.85; max-width:340px; }
+    button { padding:12px 24px; background:#222; color:#fff; border:1px solid #444; border-radius:6px; cursor:pointer; }
   </style>
 </head>
 <body>
-  <img 
-    src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" 
-    alt="BRITEX Electrónica" 
-    class="logo"
-    loading="eager"
-  >
+  <img src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" alt="BRITEX" class="logo" loading="eager">
   <h1>Sin conexión</h1>
-  <p>Tu energía está intacta. BRITEX sigue contigo, incluso cuando el voltaje de la red se ausenta.</p>
-  
-  <div class="status" id="status">Intentando reconectar...</div>
-  
-  <button onclick="window.location.reload()">Intentar de nuevo</button>
+  <p>Tu energía está intacta. BRITEX sigue contigo.</p>
+  <button onclick="location.reload()">Intentar de nuevo</button>
 
   <script>
-    const statusEl = document.getElementById('status');
-    let attemptCount = 0;
-
-    function tryReconnect() {
-      attemptCount++;
-      statusEl.textContent = `Intentando reconectar... (${attemptCount})`;
-      
-      fetch('.', { method: 'HEAD', cache: 'no-store' })
-        .then(() => {
-          window.location.reload(); // Si responde, recarga
-        })
-        .catch(() => {
-          setTimeout(tryReconnect, 5000); // Reintenta cada 5s
-        });
+    let count = 0;
+    function retry() {
+      count++;
+      fetch('.', {method:'HEAD'}).then(() => location.reload()).catch(() => {
+        setTimeout(retry, 5000);
+      });
     }
-
-    // Inicia reconexión automática
-    if (navigator.onLine) {
-      window.location.reload();
-    } else {
-      setTimeout(tryReconnect, 3000); // Primer intento en 3s
-    }
-
-    // También recarga si detecta que volvió la conexión
-    window.addEventListener('online', () => {
-      statusEl.textContent = '¡Conexión detectada! Cargando...';
-      window.location.reload();
-    });
+    setTimeout(retry, 4000);
+    addEventListener('online', () => location.reload());
   </script>
 </body>
 </html>
