--- a/offline.html
+++ b/offline.html
@@ -3,36 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#000000">
-  <title>Sin conexión | BRITEX</title>
+  <title>Sin conexión | BRITEX Electrónica</title>
   <style>
     body {
-      margin:0; padding:20px; height:100vh; background:#000; color:#fff;
-      font-family:system-ui,sans-serif; display:flex; flex-direction:column;
-      justify-content:center; align-items:center; text-align:center;
+      background-color: #000;
+      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+      text-align: center;
+      padding: 40px;
     }
-    .logo { width:90px; height:90px; margin-bottom:20px; }
-    h1 { margin:0 0 12px; font-size:1.7rem; }
-    p { margin:0 0 30px; font-size:1rem; opacity:0.85; max-width:340px; }
-    button { padding:12px 24px; background:#222; color:#fff; border:1px solid #444; border-radius:6px; cursor:pointer; }
+    .logo {
+      width: 100px;
+      height: 100px;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 16px;
+      opacity: 0.8;
+    }
   </style>
 </head>
 <body>
-  <img src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" alt="BRITEX" class="logo" loading="eager">
+  <img src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" alt="BRITEX Logo" class="logo">
   <h1>Sin conexión</h1>
-  <p>Tu energía está intacta. BRITEX sigue contigo.</p>
-  <button onclick="location.reload()">Intentar de nuevo</button>
-
-  <script>
-    let count = 0;
-    function retry() {
-      count++;
-      fetch('.', {method:'HEAD'}).then(() => location.reload()).catch(() => {
-        setTimeout(retry, 5000);
-      });
-    }
-    setTimeout(retry, 4000);
-    addEventListener('online', () => location.reload());
-  </script>
+  <p>Tu energía está intacta. BRITEX sigue contigo, incluso cuando el voltaje de la red se ausenta.</p>
 </body>
 </html>
