--- a/index.html
+++ b/index.html
@@ -4,64 +4,88 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BRITEX Electrónica</title>
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#045174" />
-  <meta name="description" content="Tienda cubana de productos electrónicos y energía confiable. Funciona offline." />
-  
   <style>
     body {
-      margin: 0;
-      padding: 20px;
-      background: #000;
+      background-color: #000;
       color: #fff;
-      font-family: system-ui, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      padding: 40px;
     }
-    .logo { width: 100px; height: 100px; margin: 20px 0; }
-    h1 { margin: 10px 0; font-size: 1.8rem; }
-    p { font-size: 1rem; opacity: 0.85; max-width: 340px; margin: 0 0 30px; }
+    .logo {
+      width: 120px;
+      height: 120px;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 16px;
+      opacity: 0.8;
+    }
     .btn {
-      display: block;
-      margin: 12px auto;
-      padding: 12px;
-      background: #045174;
-      color: white;
+      display: inline-block;
+      margin: 15px;
+      padding: 12px 20px;
+      background-color: #045174;
+      color: #fff;
       text-decoration: none;
       border-radius: 6px;
       font-weight: bold;
-      width: 80%;
-      max-width: 320px;
+      transition: background 0.3s;
+      cursor: pointer;
     }
-    .btn:hover { background: #0679a3; }
-    #status { font-size: 0.9rem; opacity: 0.7; margin-top: 20px; }
+    .btn:hover {
+      background-color: #0679a3;
+    }
   </style>
 </head>
 <body>
-  <img src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" alt="BRITEX" class="logo" loading="eager" />
+  <img src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" alt="BRITEX Logo" class="logo" />
+  
   <h1>BRITEX Electrónica</h1>
-  <p>Productos electrónicos y energía confiable. Funciona incluso sin conexión.</p>
+  <p>Plataforma cubana de innovación técnica, productos electrónicos y energía confiable.</p>
 
-  <a href="https://www.britexelectronica.com/tienda/" class="btn">📦 Ver Catálogo</a>
+  <!-- Botones principales -->
+  <a href="https://www.britexelectronica.com/tienda/" class="btn">📦 Catálogo</a>
   <a href="https://www.trustpilot.com/review/britexelectronica.com" class="btn">⭐ Opiniones</a>
   <a href="https://www.britexelectronica.com/contáctanos/" class="btn">📧 Contáctanos</a>
 
+  <!-- Botón de instalación -->
   <button id="installBtn" class="btn" style="display:none;">📲 Instalar App</button>
 
-  <div id="status">Cargando... (Offline listo)</div>
+  <!-- Registro del Service Worker -->
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js");
+    }
 
-<script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js', { scope: '/' })
-        .then(() => console.log('SW registrado OK'))
-        .catch(err => console.error('Error SW:', err));
+    let deferredPrompt;
+    const installBtn = document.getElementById("installBtn");
+
+    window.addEventListener("beforeinstallprompt", (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      installBtn.style.display = "inline-block";
     });
-  }
-</script>
+
+    installBtn.addEventListener("click", async () => {
+      if (deferredPrompt) {
+        deferredPrompt.prompt();
+        const { outcome } = await deferredPrompt.userChoice;
+        if (outcome === "accepted") {
+          console.log("Usuario instaló la PWA");
+        } else {
+          console.log("Usuario rechazó la instalación");
+        }
+        deferredPrompt = null;
+        installBtn.style.display = "none";
+      }
+    });
+  </script>
 </body>
 </html>
