--- a/offline.html
+++ b/offline.html
@@ -6,7 +6,7 @@
   <title>Sin conexión | BRITEX Electrónica</title>
   <style>
     body {
-      background-color: #000;
+      background-color: #B3E5FC;
       color: #fff;
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <img src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" alt="BRITEX Logo" class="logo">
+  <img src="https://ogbe21.github.io/britex-pwa/icon-512.webp" alt="BRITEX Logo" class="logo">
   <h1>Sin conexión</h1>
   <p>Tu energía está intacta. BRITEX sigue contigo, incluso cuando el voltaje de la red se ausenta.</p>
 </body>
