--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BRITEX Electrónica</title>
+  <title>Britex Electrónica</title>
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#045174" />
   <style>
     body {
-      background-color: #000;
+      background-color: #B3E5FC;
       color: #fff;
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
@@ -45,7 +45,7 @@
   </style>
 </head>
 <body>
-  <img src="https://files.cdn-files-a.com/uploads/11353011/800_694b5776d2a9c.png?aspect_ratio=1:1&width=192&format=png" alt="BRITEX Logo" class="logo" />
+  <img src="https://ogbe21.github.io/britex-pwa/icon-521.webp" alt="BRITEX Logo" class="logo" />
   
   <h1>BRITEX Electrónica</h1>
   <p>Plataforma cubana de innovación técnica, productos electrónicos y energía confiable.</p>
