--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8"><title>BRITEX PWA</title>
-  <style>body { background: #045174; display: flex; align-items: center; justify-content: center; height: 100vh; color: white; }</style>
+  <style>body { background: #045174; display: flex; align-items: center; justify-content: center; height: 100vh; color: white; font-family: sans-serif; }</style>
 </head>
 <body>
   <div style="text-align: center;">
-    <img src="icon-512.webp" width="150">
-    <p>Cargando BRITEX Electrónica...</p>
+    <img src="icon-512.png" width="120">
+    <p>Iniciando Britex Electrónica...</p>
   </div>
   <script>window.location.href = "https://www.britexelectronica.com/";</script>
 </body>
