--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8"><title>BRITEX PWA</title>
+  <meta charset="UTF-8">
+  <title>BRITEX PWA</title>
   <style>body { background: #045174; display: flex; align-items: center; justify-content: center; height: 100vh; color: white; font-family: sans-serif; }</style>
 </head>
 <body>
@@ -9,6 +10,12 @@
     <img src="icon-512.png" width="120">
     <p>Iniciando Britex Electrónica...</p>
   </div>
-  <script>window.location.href = "https://www.britexelectronica.com/";</script>
+  <script>
+    if (navigator.onLine) {
+      window.location.href = "https://www.britexelectronica.com/";
+    } else {
+      window.location.href = "offline.html";
+    }
+  </script>
 </body>
 </html>
