--- a/offline.html
+++ b/offline.html
@@ -19,7 +19,7 @@
   <a href="https://www.britexelectronica.com/tienda/" class="btn">📦 Ver Catálogo</a>
   <script>
     window.addEventListener('online', () => {
-        setTimeout(() => window.location.href = "https://www.britexelectronica.com/tienda/", 1000);
+      setTimeout(() => window.location.href = "https://www.britexelectronica.com/", 1000);
     });
   </script>
 </body>
